<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="260dp"
                    android:layout_height="170dp"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="profile image"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/male_icon" />

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_charityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15sp"
                android:fontFamily="sans-serif-light"
                android:text="create account"
                android:textColor="@color/white"
                android:textSize="32sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rellay1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="gender: " />

                        <RadioGroup
                            android:id="@+id/rg_userType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_student"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="studentUser" />

                            <RadioButton
                                android:id="@+id/radio_employee"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="employeeUser" />
                        </RadioGroup>

                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="name:"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="gender: " />

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="male" />

                            <RadioButton
                                android:id="@+id/radio_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="female" />
                        </RadioGroup>

                    </LinearLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/age"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="email:"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="username:"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true">


                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="password:"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_ID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/student_id"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_supervisorName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/supervisor_name"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_supervisorEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/supervisor_email"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_supervisorPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/supervisor_phonenumber"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="120dp"
                        android:paddingBottom="5dp"
                        tools:ignore="RtlSymmetry">


                        <Button
                            android:id="@+id/btn_create"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/custom_button"
                            android:text="@string/sign_up"
                            android:textAllCaps="false"
                            android:textColor="#3797CF"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>